# gitinfo

./: .gitattributes  .gitinfo  .onedev-buildspec.yml  CONTRIBUTING.md  README.md  gitinfo.schema.json  validate.js
.github/workflows/: test-validators.yml
examples/: minimal.gitinfo  mirror-only.gitinfo  open-source-project.gitinfo
validators/bash/: README.md  validate.sh
validators/nodejs/: README.md  validate.js
validators/powershell/: README.md  Validate-GitInfo.ps1
validators/rust/: Cargo.toml  README.md
validators/rust/src/: main.rs
